force-app/main/default/objects/Daily_Enrichment__c/Daily_Enrichment__c.object-meta.xml
<CustomObject>
    <label>Daily Enrichment</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Daily Enrichment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Enrichment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>