force-app/main/default/objects/Daily_Enrichment__c/fields/Backyard2__c.field-meta.xml
<CustomField>
    <fullName>Backyard2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backyard</label>
    <type>Checkbox</type>
</CustomField>