force-app/main/default/objects/Daily_Enrichment__c/fields/Ball_Pit__c.field-meta.xml
<CustomField>
    <fullName>Ball_Pit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ball Pit</label>
    <type>Checkbox</type>
</CustomField>