force-app/main/default/objects/Daily_Enrichment__c/fields/DE_Date__c.field-meta.xml
<CustomField>
    <fullName>DE_Date__c</fullName>
    <label>DE Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>