force-app/main/default/objects/Daily_Enrichment__c/fields/Enrichment_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Coordinator__c</fullName>
    <label>Enrichment Coordinator</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hailey Kohl</fullName>
            </value>
            <value>
                <fullName>Carrie Bretz</fullName>
            </value>
            <value>
                <fullName>Tony Rankin</fullName>
            </value>
            <value>
                <fullName>Courtney Leigh</fullName>
            </value>
            <value>
                <fullName>Kay Duffy Taylor</fullName>
            </value>
            <value>
                <fullName>Bill Duvall</fullName>
            </value>
            <value>
                <fullName>Jess Drew</fullName>
            </value>
            <value>
                <fullName>Joanne Smith</fullName>
            </value>
            <value>
                <fullName>Vicky Watkins</fullName>
            </value>
            <value>
                <fullName>Heather Boothe</fullName>
            </value>
            <value>
                <fullName>Scott Sherlock</fullName>
            </value>
            <value>
                <fullName>Tom Griswold</fullName>
            </value>
            <value>
                <fullName>EG Aguilar</fullName>
            </value>
            <value>
                <fullName>Adam Gebauer</fullName>
            </value>
            <value>
                <fullName>Cindy Walden</fullName>
            </value>
            <value>
                <fullName>Andrea Stout</fullName>
            </value>
            <value>
                <fullName>Catherine Adair</fullName>
            </value>
            <value>
                <fullName>Jacqui Moreland</fullName>
            </value>
            <value>
                <fullName>Tiffany Van Hook</fullName>
            </value>
            <value>
                <fullName>Lois Michael</fullName>
            </value>
            <value>
                <fullName>Jeremy Robichaud</fullName>
            </value>
            <value>
                <fullName>Jeannie Pittman</fullName>
            </value>
            <value>
                <fullName>Joe Gordon</fullName>
            </value>
            <value>
                <fullName>Sarah Getman</fullName>
            </value>
            <value>
                <fullName>Lacie Davis</fullName>
            </value>
            <value>
                <fullName>Joe Hinkle</fullName>
            </value>
            <value>
                <fullName>Lindsey Cooke</fullName>
            </value>
            <value>
                <fullName>Raymond Willis</fullName>
            </value>
            <value>
                <fullName>Salina Wenzel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>