force-app/main/default/objects/Daily_Enrichment__c/fields/Enrichment_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Coordinator_Name__c</fullName>
    <label>Enrichment Coordinator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>