force-app/main/default/objects/Daily_Enrichment__c/fields/Enrichment_Coordinator_Other__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Coordinator_Other__c</fullName>
    <label>Enrichment Coordinator - Other</label>
    <type>TextArea</type>
</CustomField>