force-app/main/default/objects/Daily_Enrichment__c/fields/Extra_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Extra_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Enrichment</label>
    <type>Checkbox</type>
</CustomField>