force-app/main/default/objects/Daily_Enrichment__c/fields/Gym__c.field-meta.xml
<CustomField>
    <fullName>Gym__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gym</label>
    <type>Checkbox</type>
</CustomField>