force-app/main/default/objects/Daily_Enrichment__c/fields/IPY__c.field-meta.xml
<CustomField>
    <fullName>IPY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPY</label>
    <type>Checkbox</type>
</CustomField>