force-app/main/default/objects/Daily_Enrichment__c/fields/Lounge__c.field-meta.xml
<CustomField>
    <fullName>Lounge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lounge</label>
    <type>Checkbox</type>
</CustomField>