force-app/main/default/objects/Daily_Enrichment__c/fields/OEP__c.field-meta.xml
<CustomField>
    <fullName>OEP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outside ExPen</inlineHelpText>
    <label>OEP</label>
    <type>Checkbox</type>
</CustomField>