force-app/main/default/objects/Daily_Enrichment__c/fields/OPY__c.field-meta.xml
<CustomField>
    <fullName>OPY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPY</label>
    <type>Checkbox</type>
</CustomField>