force-app/main/default/objects/Daily_Enrichment__c/fields/Real_Life_Room__c.field-meta.xml
<CustomField>
    <fullName>Real_Life_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real-Life Room</label>
    <type>Checkbox</type>
</CustomField>