force-app/main/default/objects/Daily_Enrichment__c/fields/Related_Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Related_Treatment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Treatment Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Daily Enrichment</relationshipLabel>
    <relationshipName>Daily_Enrichment</relationshipName>
    <type>Lookup</type>
</CustomField>