force-app/main/default/objects/Daily_Enrichment__c/fields/Shelter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shelter Notes</label>
    <type>Checkbox</type>
</CustomField>