force-app/main/default/objects/Daily_Enrichment__c/fields/Treatment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Treatment Bundle</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Enrichment Plan</relationshipLabel>
    <relationshipName>Enrichments</relationshipName>
    <type>Lookup</type>
</CustomField>