force-app/main/default/objects/Daily_Enrichment__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Treatment Plan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Daily Enrichment</relationshipLabel>
    <relationshipName>Enrichments</relationshipName>
    <type>Lookup</type>
</CustomField>