force-app/main/default/objects/Daily_Enrichment__c/fields/Walk__c.field-meta.xml
<CustomField>
    <fullName>Walk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walk</label>
    <type>Checkbox</type>
</CustomField>