force-app/main/default/objects/Daily_Enrichment__c/fields/X1_1__c.field-meta.xml
<CustomField>
    <fullName>X1_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 on 1</label>
    <type>Checkbox</type>
</CustomField>