force-app/main/default/objects/Daily_Enrichment__c/validationRules/Other_Enrichment_Coordinator.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Enrichment_Coordinator</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Enrichment_Coordinator__c, &quot;Other&quot;), ISBLANK( Enrichment_Coordinator_Other__c ) )</errorConditionFormula>
    <errorDisplayField>Enrichment_Coordinator_Other__c</errorDisplayField>
    <errorMessage>Please enter your first and last name.</errorMessage>
</ValidationRule>