force-app/main/default/objects/Daily_Enrichment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Notes__c</columns>
    <columns>Enrichment_Coordinator__c</columns>
    <columns>DE_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>